--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ezylogs",
-  "version": "1.0.2",
-  "description": "A simple and affordable remote log viewer, monitoring and health check service",
+  "version": "1.0.3",
+  "description": "An affordable and easy to use remote Node.js log viewer, server/process monitor and website health check service.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,7 +18,10 @@
     "logs",
     "health",
     "checks",
-    "logging"
+    "logging",
+    "logger",
+    "server",
+    "management"
   ],
   "dependencies": {
     "axios": "^0.18.0",
